--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
 <div class="animi">
     <p>Animation cicle moving</p>
+    <p>Animation cicle moving</p>
 </div>
     </div>
 </body>
